--- a/fend/package.json
+++ b/fend/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "bootstrap": "^4.4.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
@@ -24,8 +26,22 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --watchAll",
+    "test": "jest --watchAll --collectCoverage",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "verbose": true,
+    "transform": {
+      "^.+\\.jsx?$": "<rootDir>/node_modules/babel-jest",
+      "unmockedModulePathPatterns": [
+        "<rootDir>/node_modules/react",
+        "<rootDir>/node_modules/react-bootstrap",
+        "<rootDir>/node_modules/react-dom",
+        "<rootDir>/node_modules/react-addons-test-utils",
+        "<rootDir>/src/pages/home",
+        "<rootDir>/src/pages/bootstrap"
+      ]
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,6 +59,10 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^9.5.0"
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-react-jsx": "^7.9.4",
+    "@testing-library/react": "^9.5.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2"
   }
 }
